2012-07-12  Adam Barth  <abarth@webkit.org>

        Parse the viewport meta tag like iOS
        https://bugs.webkit.org/show_bug.cgi?id=72722

        Reviewed by Alexey Proskuryakov.

        Our parsing appears to match iOS already.  This patch simply adds tests
        that show that we agree on these cases.

        * fast/viewport/viewport-133-expected.txt: Added.
        * fast/viewport/viewport-133.html: Added.
        * fast/viewport/viewport-134-expected.txt: Added.
        * fast/viewport/viewport-134.html: Added.

2012-07-12  Joshua Bell  <jsbell@chromium.org>

        IndexedDB: ASSERT hit calling open from callback in Worker
        https://bugs.webkit.org/show_bug.cgi?id=90832

        Reviewed by Kentaro Hara.

        Call IDBFactory.open() twice from a worker - once from the initial worker
        script evaluation, and once in a callback after the worker thread data
        has been purged.

        * storage/indexeddb/open-twice-workers-expected.txt: Added.
        * storage/indexeddb/open-twice-workers.html: Added.
        * storage/indexeddb/resources/open-twice.js: Added.
        (test):
        (openAnother):

2012-07-12  Kristóf Kosztyó  <kkristof@inf.u-szeged.hu>

        [Qt] platform/qt/css3 tests needs update after rebaseline
        https://bugs.webkit.org/show_bug.cgi?id=91086

        Reviewed by Csaba Osztrogonác.

        * platform/qt-5.0/Skipped:
        * platform/qt/css3/css3-modsel-33-expected.png:
        * platform/qt/css3/css3-modsel-33-expected.txt:
        * platform/qt/css3/css3-modsel-35-expected.png:
        * platform/qt/css3/css3-modsel-35-expected.txt:
        * platform/qt/css3/css3-modsel-36-expected.png:
        * platform/qt/css3/css3-modsel-36-expected.txt:
        * platform/qt/css3/css3-modsel-37-expected.png:
        * platform/qt/css3/css3-modsel-37-expected.txt:
        * platform/qt/css3/filters/effect-brightness-expected.png:
        * platform/qt/css3/filters/effect-brightness-expected.txt: